--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+html
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -294,7 +295,7 @@
   </div>
 
   <header>
-    <div class="logo">Chicha</div>
+    <div class="logo">KIRILL</div>
     <h1>Привет, я Кирилл</h1>
     <p>Твои идеи — мои решения: сайты и мини-приложения, которые делают бизнес проще</p>
     <a class="btn" href="https://t.me/yourtelegram" target="_blank" rel="noopener noreferrer">Связаться в Telegram</a>
@@ -346,7 +347,7 @@
   </section>
 
   <footer class="contact">
-    <p>Готов выполнить работу любой сложности — <a href="https://t.me/yourtelegram" target="_blank" rel="noopener noreferrer">написать в Telegram</a></p>
+    <p>📩 Готов к сотрудничеству — <a href="https://t.me/yourtelegram" target="_blank" rel="noopener noreferrer">написать в Telegram</a></p>
   </footer>
 
   <script>
@@ -394,45 +395,30 @@
     });
 
     // Валидация формы
-<section class="code-block">
-  <div class="code-header">
-    <span class="dot red"></span>
-    <span class="dot yellow"></span>
-    <span class="dot green"></span>
-    <span class="filename">form.js</span>
-  </div>
+    const form = document.getElementById('contactForm');
+    form.addEventListener('submit', e => {
+      e.preventDefault();
 
-  <form id="appForm" class="code-form">
-    <label>
-      Имя:
-      <input type="text" name="name" required minlength="2" />
-    </label>
-    <label>
-      Email:
-      <input type="email" name="email" required />
-    </label>
-    <button type="submit">Отправить</button>
-    <p id="formMessage" class="form-message"></p>
-  </form>
-</section>
- 
-document.addEventListener('DOMContentLoaded', () => {
-  const form = document.getElementById('appForm');
-  const message = document.getElementById('formMessage');
+      const nameInput = form.elements['name'];
+      const messageInput = form.elements['message'];
+      let valid = true;
 
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
+      [nameInput, messageInput].forEach(input => {
+        if(!input.value.trim()) {
+          input.classList.add('error');
+          valid = false;
+        } else {
+          input.classList.remove('error');
+        }
+      });
 
-    if (!form.checkValidity()) {
-      message.textContent = 'Пожалуйста, заполните все поля корректно.';
-      return;
-    }
-
-    message.style.color = 'lightgreen';
-    message.textContent = 'Форма успешно отправлена!';
-    form.reset();
-  });
-});
-
+      if(valid) {
+        alert('Спасибо за сообщение! Я скоро свяжусь с вами.');
+        form.reset();
+      } else {
+        alert('Пожалуйста, заполните все поля.');
+      }
+    });
+  </script>
 </body>
 </html>
