--- a/index.html
+++ b/index.html
@@ -139,13 +139,18 @@
 }
 
 .service-pill {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #f2ddc6;
   color: #333;
-  padding: 1rem 1.5rem;
+  padding: 1.2rem 1.6rem;
   border-radius: 999px;
   font-weight: 500;
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
   transition: all 0.3s ease;
+  min-height: 70px;
+  text-align: center;
   cursor: default;
 }
 
@@ -329,7 +334,6 @@
     <div class="service-pill">Сайты визитки</div>
     <div class="service-pill">Приложения о продукте-курсе</div>
     <div class="service-pill">Доработка или переделаю приложения</div>
-    <div class="service-pill">UI/UX дизайн интерфейсов</div> <!-- Пятая, можешь заменить -->
   </div>
 </section>
 
