--- a/index.html
+++ b/index.html
@@ -236,14 +236,15 @@
     }
 
     /* Форма обратной связи */
-    .code-block {
+    .code-form {
+  max-width: 600px;
+  margin: 4rem auto;
   background-color: #1e1e1e;
   color: #d4d4d4;
   border-radius: 10px;
-  overflow: hidden;
-  margin: 2rem 0;
   font-family: 'Courier New', monospace;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .code-header {
@@ -260,33 +261,59 @@
   margin-right: 0.5rem;
 }
 
-.code-header .red {
-  background-color: #ff5f56;
-}
+.red { background-color: #ff5f56; }
+.yellow { background-color: #ffbd2e; }
+.green { background-color: #27c93f; }
 
-.code-header .yellow {
-  background-color: #ffbd2e;
-}
-
-.code-header .green {
-  background-color: #27c93f;
-}
-
-.code-header .filename {
+.filename {
   margin-left: auto;
   color: #ccc;
   font-size: 0.9rem;
 }
 
 .code-content {
-  padding: 1rem;
-  overflow-x: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1.5rem;
 }
 
-.code-content pre {
-  margin: 0;
-  white-space: pre-wrap;
-  word-break: break-word;
+.code-content label {
+  font-weight: bold;
+  color: #9cdcfe;
+}
+
+.code-content input,
+.code-content textarea {
+  background-color: #1e1e1e;
+  border: 1px solid #444;
+  color: #d4d4d4;
+  padding: 0.7rem 1rem;
+  border-radius: 5px;
+  font-family: inherit;
+  resize: none;
+}
+
+.code-content input:focus,
+.code-content textarea:focus {
+  border-color: #007acc;
+  outline: none;
+}
+
+.code-content button {
+  align-self: flex-start;
+  background-color: #007acc;
+  color: white;
+  border: none;
+  padding: 0.7rem 1.5rem;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.code-content button:hover {
+  background-color: #005fa3;
 }
 
 
@@ -358,27 +385,24 @@
       </div>
     </div>
   </section>
-<section class="code-block">
+<section class="code-form">
   <div class="code-header">
     <span class="dot red"></span>
     <span class="dot yellow"></span>
     <span class="dot green"></span>
     <span class="filename">contact.js</span>
   </div>
-  <div class="code-content">
-<pre><code>
-&lt;form id="contactForm"&gt;
-  &lt;label for="name"&gt;Имя&lt;/label&gt;
-  &lt;input type="text" id="name" name="name" placeholder="Ваше имя" required /&gt;
+  <form id="contactForm" class="code-content" novalidate>
+    <label for="name">Имя</label>
+    <input type="text" id="name" name="name" placeholder="Ваше имя" required />
 
-  &lt;label for="message"&gt;Сообщение&lt;/label&gt;
-  &lt;textarea id="message" name="message" rows="5" placeholder="Опишите задачу" required&gt;&lt;/textarea&gt;
+    <label for="message">Сообщение</label>
+    <textarea id="message" name="message" rows="5" placeholder="Опишите задачу" required></textarea>
 
-  &lt;button type="submit"&gt;Отправить&lt;/button&gt;
-&lt;/form&gt;
-</code></pre>
-  </div>
+    <button type="submit">Отправить</button>
+  </form>
 </section>
+
 
 
   <footer class="contact">
