--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Кирилл | Telegram & Web разработка</title>
   <style>
     :root {
-      --bg-color: #F2DDC6;
+      --bg-color: #C5E6F2;
       --accent-color: #000;
       --highlight: #caa574;
       --btn-bg: #000;
@@ -394,7 +394,7 @@
   </div>
   <form id="contactForm" class="code-content" novalidate>
     <label for="name">Имя</label>
-    <input type="text" id="name" name="name" placeholder="Ваше имя" required />
+    <input type="text" id="name" name="name" placeholder="Как можно обращаться" required />
 
     <label for="message">Сообщение</label>
     <textarea id="message" name="message" rows="5" placeholder="Опишите задачу" required></textarea>
@@ -406,7 +406,7 @@
 
 
   <footer class="contact">
-    <p>📩 Готов к сотрудничеству — <a href="https://t.me/yourtelegram" target="_blank" rel="noopener noreferrer">написать в Telegram</a></p>
+    <p>Готов выполнить работу — <a href="https://t.me/yourtelegram" target="_blank" rel="noopener noreferrer">написать в Telegram</a></p>
   </footer>
 
   <script>
