--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 }
 <script>
   const TOKEN = '7551886319:AAESFEAVKeaXHqUgOSrVc2p4CBkjZmRacUI'; // ВСТАВЬ СЮДА токен от BotFather
-  const CHAT_ID = 'Chicha207';  // ВСТАВЬ СЮДА свой Telegram ID
+  const CHAT_ID = '5362730618';  // ВСТАВЬ СЮДА свой Telegram ID
   const API = `https://api.telegram.org/bot${7551886319:AAESFEAVKeaXHqUgOSrVc2p4CBkjZmRacUI}/sendMessage`;
 
   document.getElementById('contactForm').addEventListener('submit', function(e) {
