--- a/index.html
+++ b/index.html
@@ -316,22 +316,23 @@
   background-color: #005fa3;
 }
 <script>
-  const TOKEN = '7551886319:AAESFEAVKeaXHqUgOSrVc2p4CBkjZmRacUI'; // ВСТАВЬ СЮДА токен от BotFather
-  const CHAT_ID = '5362730618';  // ВСТАВЬ СЮДА свой Telegram ID
-  const API = `https://api.telegram.org/bot${7551886319:AAESFEAVKeaXHqUgOSrVc2p4CBkjZmRacUI}/sendMessage`;
+  const TOKEN = '7551886319:AAESFEAVKeaXHqUgOSrVc2p4CBkjZmRacUI';
+  const CHAT_ID = 5362730618;
+  const API = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
 
   document.getElementById('contactForm').addEventListener('submit', function(e) {
     e.preventDefault();
 
     const name = document.getElementById('name').value.trim();
     const message = document.getElementById('message').value.trim();
+    const status = document.getElementById('formStatus');
 
     if (!name || !message) {
-      alert("Пожалуйста, заполните все поля.");
+      status.textContent = "❌ Заполните все поля.";
       return;
     }
 
-    const text = `📩 Новая заявка с сайта:\n\n👤 Имя: ${name}\n📝 Сообщение: ${message}`;
+    const text = `📩 Новая заявка с сайта:\n\n👤 Имя и TG: ${name}\n📝 Сообщение: ${message}`;
 
     fetch(API, {
       method: 'POST',
@@ -344,15 +345,14 @@
     })
     .then(res => {
       if (res.ok) {
-        document.getElementById('formStatus').textContent = "✅ Заявка отправлена!";
+        status.textContent = "✅ Заявка отправлена!";
         document.getElementById('contactForm').reset();
       } else {
-        alert("Ошибка при отправке!");
+        status.textContent = "❌ Ошибка при отправке.";
       }
     })
     .catch(err => {
-      console.error("Ошибка:", err);
-      alert("Что-то пошло не так.");
+      status.textContent = "⚠️ Ошибка: " + err.message;
     });
   });
 </script>
